# pygame_gui_xml

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
examples/: playground.py  sample_01.xml  sample_02.xml
src/pygame_gui_xml/: __init__.py
tests/: test_pygame_gui_xml.py
