[metadata]
name = pygame_gui_xml
version = 0.5.7
author = Shi Johnson-Bey
author_email = shijbey@gmail.com
description = Create game UI with pygame_gui and XML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShiJbey/pygame_gui_xml
project_urls = 
    Bug Tracker = https://github.com/ShiJbey/pygame_gui_xml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pygame_gui ==0.5.7

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src
